add_custom_target(tests)
add_custom_target(tests-core)
add_custom_target(tests-kernel)

add_subdirectory(algebra)
add_subdirectory(dynamics)
add_subdirectory(function)
add_subdirectory(geometry)
add_subdirectory(hybrid)
add_subdirectory(numeric)
add_subdirectory(output)
add_subdirectory(solvers)
add_subdirectory(symbolic)
