add_custom_target(tests-cpp)
add_custom_target(tests-core)
add_custom_target(tests-kernel)

add_dependencies(everything tests)

add_subdirectory(numeric)
add_subdirectory(algebra)
add_subdirectory(function)
add_subdirectory(symbolic)
add_subdirectory(geometry)
add_subdirectory(configuration)
add_subdirectory(solvers)
add_subdirectory(output)
add_subdirectory(concurrency)
add_subdirectory(dynamics)
add_subdirectory(hybrid)
add_subdirectory(verification)