add_custom_target(tests-cpp)
add_custom_target(tests-core)
add_custom_target(tests-kernel)

add_dependencies(everything tests)

add_subdirectory(numeric)
add_subdirectory(algebra)
add_subdirectory(function)
add_subdirectory(symbolic)
add_subdirectory(geometry)
add_subdirectory(solvers)
add_subdirectory(io)
add_subdirectory(dynamics)
add_subdirectory(hybrid)